# verifyos-cli

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  release-plz.toml  verifyos.example.toml
.github/workflows/: frontend.yml  release-plz.yml  release.yml  rust.yml  security.yml  voc-analysis.yml  vscode-extension.yml
apps/backend/: Cargo.toml  Dockerfile  README.md  deploy.sh
apps/backend/infra/: README.md  main.tf  outputs.tf  variables.tf
apps/backend/src/: main.rs
apps/backend/src/app/: auth.rs  mod.rs  rate_limit.rs  scan.rs  state.rs
apps/backend/src/domain/: mod.rs
apps/backend/src/infra/http/: handlers.rs  router.rs
apps/frontend/: README.md  package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/: GoogleAnalytics.tsx
crates/verifyos-cli/: CHANGELOG.md  Cargo.toml
crates/verifyos-cli/src/: main.rs
crates/verifyos-cli/tests/: cli_test.rs
crates/verifyos-core/: CHANGELOG.md  Cargo.toml
crates/verifyos-core/src/: engine.rs
crates/verifyos-parsers/: CHANGELOG.md  Cargo.toml
crates/verifyos-parsers/src/: lib.rs  macho_parser.rs  plist_reader.rs
crates/verifyos-rules/: CHANGELOG.md  Cargo.toml
crates/verifyos-rules/src/: core.rs  entitlements.rs  lib.rs  permissions.rs  privacy.rs
crates/verifyos-rules/tests/: rules_test.rs
crates/verifyos-rules/tests/fixtures/TestApp.app/: Info.plist
docs/: ARCHITECTURE.md  STRUCTURE.md
editors/vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
examples/: build_examples.sh
examples/Payload/BadApp.app/: Info.plist
examples/Payload/GoodApp.app/: Info.plist
src/: agent_assets.rs  agents.rs  ci_comment.rs  config.rs  doctor.rs  lib.rs  main.rs  profiles.rs
src/commands/: doctor.rs  handoff.rs  init.rs  lsp.rs  mod.rs  pr_comment.rs  support.rs
src/core/: engine.rs
src/parsers/: bundle_scanner.rs  macho_parser.rs  macho_scanner.rs  mod.rs  plist_reader.rs  provisioning_profile.rs  zip_extractor.rs
src/report/: agent_pack.rs  data.rs  mod.rs  renderers.rs
src/rules/: app_icon.rs  ats.rs  binary_stripping.rs  bitcode.rs  bundle_leakage.rs  bundle_metadata.rs  core.rs  deprecated_api.rs  entitlements.rs  export_compliance.rs  extensions.rs  info_plist.rs  launch_screen.rs  mod.rs  nested_bundles.rs  os_version.rs  permissions.rs  privacy.rs  privacy_manifest.rs  privacy_sdk.rs  private_api.rs  signing.rs  xcode_requirements.rs
tests/: cli_test.rs  config_test.rs  editor_contract_test.rs  report_test.rs  rules_test.rs  workflow_contract_test.rs
