[package]
name = "verifyos-cli"
version = "0.6.2"
edition = "2021"
authors = ["0xboji"]
description = "AI agent-friendly Rust CLI for scanning iOS app bundles for App Store rejection risks before submission."
license = "MIT"
repository = "https://github.com/0xBoji/verifyos-cli"
homepage = "https://github.com/0xBoji/verifyos-cli"
readme = "README.md"
keywords = ["ai", "ai-agent", "ios", "appstore", "security"]
categories = ["command-line-utilities", "development-tools"]
autobins = false

[[bin]]
name = "voc"
path = "src/main.rs"

[dependencies]
# CLI Frontend
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.2", features = ["fancy"] }
indicatif = "0.17"
comfy-table = "7.1"
colored = "2.1"
textwrap = "0.16.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Engine & Parsers
thiserror = "2.0.18"
apple-codesign = "0.27"
plist = "1.6"
zip = "0.6"
goblin = "0.8"
tempfile = "3.26.0"
