[package]
name = "verifyos-parsers"
version = "0.1.0"
edition = "2021"
authors = ["0xboji"]
description = "Format parsers (zip extraction, plist mapping, Mach-O inspection) for verifyos-cli."
license = "MIT"
repository = "https://github.com/0xBoji/verifyos-cli"
homepage = "https://github.com/0xBoji/verifyos-cli"

[dependencies]
apple-codesign = "0.27"
plist = "1.6"
zip = "0.6"
goblin = "0.8"
tempfile = "3.26.0"
thiserror = "2.0.18"
