[package]
name = "verifyos-rules"
version = "0.1.0"
edition = "2021"
authors = ["0xboji"]
description = "Trait-based App Store validation rules engine for verifyos-cli."
license = "MIT"
repository = "https://github.com/0xBoji/verifyos-cli"
homepage = "https://github.com/0xBoji/verifyos-cli"
readme = "../../README.md"

[dependencies]
miette = { version = "7.2", features = ["fancy"] }
thiserror = "2.0.18"
verifyos-parsers = { version = "0.1.0", path = "../verifyos-parsers" }
